fix dark mode bug in individual hero section

--- a/src/pages/hero/Hero.css
+++ b/src/pages/hero/Hero.css
@@ -5,7 +5,7 @@
     margin: auto;
     border: 2px solid black;
     text-align: center;
-    background-color: rgb(233, 233, 233);
+    background-color: rgba(61, 54, 54, 0);
     padding-bottom: 1.2em;
 }
 
